--- a/Vues/ViewLigneFacture.xaml
+++ b/Vues/ViewLigneFacture.xaml
@@ -1,10 +1,11 @@
-﻿<UserControl x:Class="ProjetInfoToolsCRM.ViewClient"
+﻿<UserControl x:Class="ProjetInfoToolsCRM.Vues.ViewLigneFacture"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ProjetInfoToolsCRM"
-             mc:Ignorable="d" d:DesignWidth="1000" d:DesignHeight="550"
+             xmlns:local="clr-namespace:ProjetInfoToolsCRM.Vues"
+             mc:Ignorable="d" 
+             d:DesignHeight="450" d:DesignWidth="800"
              TextElement.Foreground="White"
              TextElement.FontWeight="Regular"
              TextElement.FontSize="13"
@@ -17,16 +18,12 @@
             <RowDefinition Height="250"/>
         </Grid.RowDefinitions>
 
-        <ListView Background="#2D3343" ItemsSource="{Binding Clients}" Grid.Row="0" SelectionChanged="Client_selectionChanged" Name="ListViewClients" BorderThickness="0,0,0,1" BorderBrush="#37445F" >
+        <ListView Background="#2D3343" ItemsSource="{Binding LigneFactures}" Grid.Row="0" SelectionChanged="ListViewLF_SelectionChanged" Name="ListViewLF" BorderThickness="1" BorderBrush="#37445F" >
             <ListView.View>
                 <GridView x:Name="ClientsGrid" ColumnHeaderContainerStyle="{StaticResource myHeaderStyle}" >
-                    <GridViewColumn Header="ID"  DisplayMemberBinding="{Binding ID}" Width="80"/>
-                    <GridViewColumn Header="Nom" DisplayMemberBinding="{Binding Nom}" Width="80"/>
-                    <GridViewColumn Header="Prenom" DisplayMemberBinding="{Binding Prenom}" Width="80" />
-                    <GridViewColumn Header="Adresse" DisplayMemberBinding="{Binding Adresse}" Width="160" />
-                    <GridViewColumn Header="Telephone" DisplayMemberBinding="{Binding Telephone}" Width="80" />
-                    <GridViewColumn Header="Mail" DisplayMemberBinding="{Binding Mail}" Width="160" />
-                    <GridViewColumn Header="Mdp" DisplayMemberBinding="{Binding Mdp}" Width="80" />
+                    <GridViewColumn Header="ID Facture"  DisplayMemberBinding="{Binding MyFacture.IdFacture}" Width="120"/>
+                    <GridViewColumn Header="Id Produit" DisplayMemberBinding="{Binding MyProduit}" Width="160"/>
+                    <GridViewColumn Header="Quantité" DisplayMemberBinding="{Binding Quantite}" Width="130"/>
                 </GridView>
             </ListView.View>
             <ListView.ItemContainerStyle>
@@ -81,22 +78,14 @@
             </Grid.ColumnDefinitions>
 
             <StackPanel Orientation="Vertical" Grid.Column="0" Margin="10">
-                <Label Foreground="White">ID</Label>
-                <TextBox x:Name="TxtID" IsEnabled="False"></TextBox>
-                <Label Foreground="White">Nom</Label>
-                <TextBox x:Name="TxtNom"></TextBox>
-                <Label Foreground="White">Prenom</Label>
-                <TextBox x:Name="TxtPrenom"></TextBox>
-                <Label Foreground="White">Adresse</Label>
-                <TextBox x:Name="TxtAdresse"></TextBox>
+                <Label Foreground="White">Quantité</Label>
+                <TextBox x:Name="TxtQte" Foreground="White"></TextBox>
             </StackPanel>
             <StackPanel Orientation="Vertical" Grid.Column="1" Margin="10">
-                <Label Foreground="White">Telephone</Label>
-                <TextBox x:Name="TxtTelephone"></TextBox>
-                <Label Foreground="White">Mail</Label>
-                <TextBox x:Name="TxtMail"></TextBox>
-                <Label Foreground="White">Mdp</Label>
-                <TextBox x:Name="TxtMdp"></TextBox>
+                <Label Foreground="White">Facture</Label>
+                <ComboBox x:Name="CboF"/>
+                <Label Foreground="White">Produit</Label>
+                <ComboBox x:Name="CboP"/>
             </StackPanel>
             <Grid Grid.Column="2">
                 <Grid.RowDefinitions>
@@ -105,9 +94,9 @@
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
 
-                <Button Grid.Row="0" Name="BtnClientAdd" Click="BtnClientAdd_Click">Ajouter</Button>
-                <Button Grid.Row="1" Name="BtnClientUpdate" Click="BtnClientUpdate_Click">Modifier</Button>
-                <Button Grid.Row="2" Name="BtnClientDelete" Click="BtnClientDelete_Click">Supprimer</Button>
+                <Button Grid.Row="0" Name="BtnLFAdd" Click="BtnLFAdd_Click" >Ajouter</Button>
+                <Button Grid.Row="1" Name="BtnLFUpdate" Click="BtnLFUpdate_Click">Modifier</Button>
+                <Button Grid.Row="2" Name="BtnLFDelete" Click="BtnLFDelete_Click">Supprimer</Button>
             </Grid>
         </Grid>
 
